User can upload avatar

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -60,3 +60,10 @@ body {
         cursor: pointer;
     }
 }
+.users-show-page {
+    .user-info {
+        .thumbnail {
+            margin-bottom: 0px;
+        }
+    }
+}
