Category topic list

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -67,7 +67,7 @@ body {
         }
     }
 }
-.topics-index-page {
+.topics-index-page, .categories-show-page  {
     .topic-list {
         .nav > li > a {
             position: relative;
