--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8452,6 +8452,15 @@ body {
   margin: 12px 0;
 }
 
+.users-show-page .meta {
+  font-size: .9em;
+  color: #b3b3b3;
+}
+
+.users-show-page .reply-content {
+  margin: 6px 0;
+}
+
 .topics-index-page .topic-list .nav > li > a,
 .categories-show-page .topic-list .nav > li > a {
   position: relative;
@@ -8942,5 +8951,19 @@ body {
 .topic-body pre code:before,
 .topic-body pre code:after {
   content: normal;
+}
+
+.topic-reply hr {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.topic-reply a {
+  color: inherit;
+}
+
+.topic-reply .meta {
+  font-size: .9em;
+  color: #b3b3b3;
 }
 
