--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -104,6 +104,13 @@ body {
     .pagination {
         margin: 12px 0;
     }
+    .meta {
+        font-size: .9em;
+        color: #b3b3b3;
+    }
+    .reply-content {
+        margin: 6px 0;
+    }
 }
 .topics-index-page, .categories-show-page  {
     .topic-list {
@@ -440,5 +447,20 @@ body {
     pre code:before,
     pre code:after {
         content: normal;
+    }
+}
+.topic-reply {
+    hr {
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }
+
+    a {
+        color: inherit;
+    }
+
+    .meta {
+        font-size: .9em;
+        color: #b3b3b3;
     }
 }
