--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -112,7 +112,7 @@ body {
         margin: 6px 0;
     }
 }
-.topics-index-page, .categories-show-page  {
+.topics-index-page, .categories-show-page, .root-page {
     .topic-list {
         .nav > li > a {
             position: relative;
